--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -15,6 +15,7 @@
 <p>
 <center><button onclick="Obama()">Obama</button>
 <button onclick="Youtube()">Youtube</button>
+<button onclick="About()">About</button>
 <button onclick="Mystery()">?????</button></center>
 <script>
     function Obama(){
@@ -26,6 +27,9 @@
     }
     function Mystery(){
         window.open("https://www.youtube.com/watch?v=ub82Xb1C8os&ab_channel=JuiceboxHero")
+    }
+    function About(){
+        window.open("About.html")
         window.close()
     }
 </script>
